# CGHW4

./: CMakeLists.txt  README.md
asset/: text.txt
src/: Camera.cpp  Camera.h  Shaders.cpp  Sphere.cpp  main.cpp
src/shaders/: fragmentShader.glsl  vertexShader.glsl
